packages/lustre-v6.6.103.3/test/should_fail/semantics/sargs.lus

(* Verif des static args *)


node pluton<<const n:int>>(x: int) returns (y:int);
let
   y = n + x;
tel

node sargs(x: int) returns (y:int);
let
   y = 2 * pluton<<42.0>>(x);
tel
